logs/Slang/generated/keywords/5.6.2--keyword_join_any.sv.log
name: keyword_join_any
description: The 'join_any' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_join_any.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_join_any.sv:8:8: error: expected declarator
    bit join_any;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_join_any.sv:8:9: error: expected member
    bit join_any;
        ^~~~~~~~
